--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
 @font-face {
-    font-family: 'HSJiptokki-Black';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/HSJiptokki-Black.woff2') format('woff2');
-    font-weight: 900;
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
     font-style: normal;
 }
 * {box-sizing:border-box;}
@@ -12,7 +14,7 @@ strong,em,del,sup,sub,s,q,img,a,
 table,tr,th,td,thead,tbody,tfoot,
 form,input,fieldset,legend,button,label,textarea,option,select,
 nav,header,footer,article,section,aside,figure,figcaption,main,div,span {
-    font-family:'맑은 고딕', "Font Awesome 5 Free", "Font Awesome 5 Brands";
+    font-family:'NanumSquareNeo-Variable', "Font Awesome 5 Free", "Font Awesome 5 Brands";
     margin:0; padding:0;
     font-size:1.0rem;
     font-weight:normal;
