--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,9 @@ body {
   background-color: #001695;
   text-align: center;
 }
+body .side_nav a {
+  display: block;
+}
 body header {
   width: 1200px;
   margin: 0 auto;
@@ -86,8 +89,8 @@ body main #mainpage p:nth-of-type(2) {
 body main #mainpage p:nth-of-type(3) {
   width: 474px;
   height: 474px;
-  top: -39px;
-  right: -79px;
+  top: -80px;
+  right: -118px;
   background-image: url(../images/earth.png);
   background-size: 100%;
 }
@@ -118,17 +121,19 @@ body main #mainpage p:nth-of-type(6) {
 }
 body main #contents {
   margin-bottom: 100px;
+  padding: 20px;
 }
 body main #contents #plog {
   border-radius: 150px 150px 0 0;
 }
-body main #contents #about {
+body main #contents #about div {
   background-image: url(../images/tape_bg.png);
   background-repeat: no-repeat;
-  background-size: 900px 530px;
-  background-position: center 42px;
+  background-size: 900px 580px;
+  background-position: center -60px;
+  padding: 70px;
 }
-body main #contents #about h2 {
+body main #contents #about div h2 {
   font-family: "East Sea Dokdo";
   font-size: 4.375rem;
   margin-bottom: 32px;
@@ -189,7 +194,28 @@ body main #contents #howto ul li:last-child > p {
   background-image: url(../images/03clean.png);
 }
 body main #contents #foryou {
+  position: relative;
   border-radius: 0 0 150px 150px;
+}
+body main #contents #foryou .zero_img {
+  margin: 0 auto;
+  width: 578px;
+}
+body main #contents #foryou .zero_img img {
+  width: 100%;
+}
+body main #contents #foryou::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/object.png);
+  background-repeat: no-repeat;
+  background-size: 812px;
+  background-position: 180px 55px;
 }
 body main #endpage {
   margin-bottom: 100px;
