--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,11 @@ body {
     background-color:$body;
     text-align: center;
     //* {margin-bottom:70px;}
+    .side_nav {
+        a {
+            display:block;
+        }
+    }
     header {
         @include layout; margin-top:20px;
         h1 {
@@ -54,7 +59,7 @@ body {
                 width:510px; height:439px; background-color:$even;
                 top:-51px; left:347px;
             } 
-            p:nth-of-type(3) {width:474px; height:474px; top:-39px; right:-79px;
+            p:nth-of-type(3) {width:474px; height:474px; top:-80px; right:-118px;
                 background-image:url(../images/earth.png); background-size:100%;}
             p:nth-of-type(4) {
                 width:510px; height:439px;
@@ -69,18 +74,22 @@ body {
                 bottom:-96px; right:-646px; background-color:$odd;}
         }//e:mainpage
         #contents {
-            margin-bottom:100px;
+            margin-bottom:100px; padding:20px;
             #plog {
                 border-radius:150px 150px 0 0;
             }
             #about {
-                background-image:url(../images/tape_bg.png);
-                background-repeat:no-repeat; background-size: 900px 530px; background-position:center 42px;
-                h2 {
-                    font-family:'East Sea Dokdo'; font-size:4.375rem;
-                    margin-bottom:32px;
+                h1{}
+                div{
+                    background-image:url(../images/tape_bg.png);
+                    background-repeat:no-repeat; background-size: 900px 580px; background-position:center -60px; padding:70px;
+                    h2 {
+                        font-family:'East Sea Dokdo'; font-size:4.375rem;
+                        margin-bottom:32px;
+                    }
+                    p {}
                 }
-                p {}
+                h1{}
             }
             div > p {font-family:'NanumSquareNeo-Variable'; font-size:1.563rem; line-height:1.6;}
             #howto {
@@ -123,7 +132,24 @@ body {
                 }
             }//e:howto
             #foryou {
+                position: relative;
                 border-radius:0 0 150px 150px;
+                .zero_img {
+                    margin:0 auto;
+                    width:578px;
+                    img {
+                        width:100%;
+                    }
+                }
+            }
+            #foryou::before {
+                position:absolute; top:0; left:0;
+                content:''; display:inline-block; width:100%; height:100%;
+                background-image:url(../images/object.png);
+                background-repeat:no-repeat;
+                background-size:812px;
+                background-position:180px 55px;
+
             }
         }
         #endpage {
