--- a/styles/main.css
+++ b/styles/main.css
@@ -34,8 +34,16 @@ body header nav a {
   font-family: "Poller One";
 }
 body header nav a:hover {
-  background-color: #001695;
   color: #fff;
+  border-radius: 100%;
+  width: 15%;
+  transform: scale(1);
+}
+body header nav a:nth-child(odd):hover {
+  background-color: #4BB9EC;
+}
+body header nav a:nth-child(even):hover {
+  background-color: #A5E23B;
 }
 body main {
   width: 1200px;
@@ -50,7 +58,7 @@ body main div > .bg_odd {
   padding: 50px 80px;
 }
 body main div > .bg_even {
-  background-color: #91FF5B;
+  background-color: #A5E23B;
   padding: 50px 80px;
 }
 body main div > .title_top {
@@ -82,7 +90,7 @@ body main #mainpage p:nth-of-type(1) {
 body main #mainpage p:nth-of-type(2) {
   width: 510px;
   height: 439px;
-  background-color: #91FF5B;
+  background-color: #A5E23B;
   top: -51px;
   left: 347px;
 }
@@ -99,7 +107,7 @@ body main #mainpage p:nth-of-type(4) {
   height: 439px;
   bottom: -96px;
   left: -139px;
-  background-color: #91FF5B;
+  background-color: #A5E23B;
 }
 body main #mainpage p:nth-of-type(4) h1 {
   font-family: "Poller One";
@@ -110,7 +118,7 @@ body main #mainpage p:nth-of-type(5) {
   height: 439px;
   bottom: -96px;
   left: 371px;
-  background-color: #91FF5B;
+  background-color: #A5E23B;
 }
 body main #mainpage p:nth-of-type(6) {
   width: 1036px;
@@ -164,25 +172,23 @@ body main #contents #howto ul li .howto_contents h2 {
   display: inline-block;
   font-size: 3.125rem;
   font-weight: 800;
-  background-color: #91FF5B;
+  background-color: #A5E23B;
   padding: 10px 0;
   color: #001695;
+  margin-bottom: 20px;
 }
 body main #contents #howto ul li .howto_contents p span {
   color: #001695;
   background-color: #fff;
   font-size: 2.188rem;
-  margin-bottom: 30px;
+  line-height: 1.4;
 }
-body main #contents #howto ul li .howto_contents p:last-child span {
+body main #contents #howto ul li .howto_contents p span:last-child {
   margin-bottom: 0;
 }
 body main #contents #howto ul li .li2 h2 {
   background-color: #001695;
-  color: #91FF5B;
-}
-body main #contents #howto ul li .li2 p span {
-  color: #91FF5B;
+  color: #A5E23B;
 }
 body main #contents #howto ul li:first-child > p {
   background-image: url(../images/01walk.png);
@@ -203,6 +209,9 @@ body main #contents #foryou .zero_img {
 }
 body main #contents #foryou .zero_img img {
   width: 100%;
+}
+body main #contents #foryou .text {
+  margin-top: 20px;
 }
 body main #contents #foryou::before {
   position: absolute;
@@ -228,11 +237,18 @@ body main #endpage p {
 body main #endpage p img {
   width: 100%;
 }
+body main #endpage p:hover {
+  background-image: url(../images/apply.png);
+  background-size: cover;
+}
+body main #endpage p:hover img {
+  display: none;
+}
 body main #endpage button {
   font-family: "Poller One";
   font-size: 2.5rem;
   color: #001695;
-  background-color: #91FF5B;
+  background-color: #A5E23B;
   padding: 10px 15px;
   border-radius: 100%;
 }/*# sourceMappingURL=main.css.map */
