--- a/styles/animation.scss
+++ b/styles/animation.scss
@@ -14,6 +14,19 @@
     0% {transform:rotate(0);}
     100% {transform:rotate(360deg);}
 }
+@keyframes rotate30 {
+    0% {transform:rotate(0);}
+    100% {transform:rotate(30deg);}
+}
+@keyframes bd_rotate30 {
+    0% {back}
+    100% {transform:rotate(30deg);}
+}
+@keyframes move {
+    0% {background-position-x:0;}
+    100% {background-position-x:10000px;}
+}
+
 
 main {
     #mainpage {
